test/e2e/egress-dns/backends-ready.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dns-allowed-backend
status:
  (conditions[?type == 'Ready'].status | [0]): "True"
  (podIP != ''): true
---
apiVersion: v1
kind: Pod
metadata:
  name: dns-denied-backend
status:
  (conditions[?type == 'Ready'].status | [0]): "True"
  (podIP != ''): true
